# leetcode-solutions

./: CMakeLists.txt  CMakePresets.json
apps/: 0001-Two-Sum.cpp  0002-Add-Two-Numbers.cpp  0003-Longest-Substring-Without-Repeating-Characters.cpp  0004-Median-of-Two-Sorted-Arrays.cpp  0658-Find-K-Closest-Elements.cpp  658-Find-K-Closest-Elements.cpp  K-Closest-Elements.cpp
scripts/: build.sh
